# dfos-logos-poc

./: .gitmodules  POC_PLAN.md  README.md  WRITEUP.md
dfos-capi/: .gitignore  Makefile  agent.go  bridge_store.go  go.mod  go.sum  main.go  smoke_test.c  two_agent_test.go  waku_peer.go
dfos-module/: CMakeLists.txt  metadata.json
dfos-module/lib/: dfos.h
dfos-module/src/: dfos_module_plugin.cpp  dfos_module_plugin.h
dfos-ui/: CMakeLists.txt  metadata.json  test_load.cpp
dfos-ui/src/: DfosView.qml  dfos_backend.cpp  dfos_backend.h  dfos_ui_plugin.cpp  dfos_ui_plugin.h  dfos_ui_resources.qrc
scripts/: two_node_waku_test.sh
